--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 server.port = 5050
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 spring.datasource.url=jdbc:h2:mem:bankServices
 spring.h2.console.enabled=true
